<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

  <item
      android:id="@+id/app_bar_search"
      android:icon="@drawable/ic_search_black_24dp"
      android:orderInCategory="1"
      android:title="@string/search"
      app:actionViewClass="androidx.appcompat.widget.SearchView"
      app:showAsAction="always"
      tools:ignore="AlwaysShowAction" />
  <item
      android:id="@+id/menu_remove_word"
      android:icon="@drawable/ic_visibility_black_24dp"
      android:orderInCategory="2"
      android:title="@string/remove_word"
      app:showAsAction="always" />
  <!--  <item android:id="@+id/action_create_order2"
        android:title="Settings"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:orderInCategory="2"
        app:showAsAction="never" /> -->
  <item
      android:id="@+id/menu_start_again"
      android:orderInCategory="2"
      android:title="@string/start_again"
      app:showAsAction="never" />
  <item
      android:id="@+id/menu_settings"
      android:orderInCategory="2"
      android:title="@string/settings"
      app:showAsAction="never" />
  <!-- <item android:id="@+id/menu_download"
       android:title="@string/download_extras"
       android:orderInCategory="2"
       app:showAsAction="never" />-->
  <!--    <item
          android:id="@+id/menu_download2"
          android:orderInCategory="2"
          android:title="@string/download_list"
          app:showAsAction="never" />-->
  <!--    <item
          android:id="@+id/menu_stats"
          android:orderInCategory="2"
          android:title="@string/stats"
          app:showAsAction="never" />-->
  <item
      android:id="@+id/menu_help"
      android:orderInCategory="2"
      android:title="@string/help"
      app:showAsAction="never" />
  <!--    <item
          android:id="@+id/menu_exit"
          android:orderInCategory="2"
          android:title="@string/exit"
          app:showAsAction="never" />-->
</menu>